# Win32-shortcut

./: LICENSE  Readme.md  Win32-shortcut.cabal
src/System/Win32/: Shortcut.hs
src/System/Win32/Shortcut/: Error.hs  Internal.hs
