name:                Win32-shortcut
version:             0.0.0
synopsis:            Support for manipulating shortcuts (.lnk files) on Windows
-- description:
license:             BSD3
license-file:        LICENSE
author:              Piotr Latanowicz
maintainer:          piotr.latanowicz@gmail.com
copyright:           2017 Piotr Latanowicz
Homepage:            https://github.com/opasly-wieprz/Win32-shortcut

build-type:          Simple
cabal-version:       >=1.10
stability:           experimental
extra-source-files:
  include/windows_cconv.h

library
  default-language:  Haskell2010
  ghc-options:       -Wall -funbox-strict-fields
  cc-options:        -fno-strict-aliasing
  extra-libraries:   ole32, uuid
  exposed-modules:   System.Win32.Shortcut
  other-modules:     System.Win32.Shortcut.Error,
                     System.Win32.Shortcut.Internal
  hs-source-dirs:    src
  include-dirs:      include
  build-depends:     base >= 4.9,
                     Win32,
                     mtl,
                     th-utilities

source-repository head
  type:              git
  location:          git://github.com/opasly-wieprz/Win32-shortcut.git
